<resources>
    <!--Whole app-->
    <string name="app_name">Health App</string>

    <!--Navigation section-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello User</string>
    <string name="nav_header_subtitle">email not provided!</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Menu settings-->
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">Your Account</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Your Orders</string>

    <string name="welcomeText">Welcome to AI Medicine.</string>
    <string name="banner_Text">What are you Looking for ?</string>
    <string name="doctor_banner_Text">Doctors</string>
    <string name="doctor_search">Search for Doctors</string>
    <string name="medicine_banner_Text">Pharmacy</string>
    <string name="medicine_search">Best deals on Medicines </string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="register_here">No account yet? Create one</string>

    <string name="title_activity_sample">sampleActivity</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="provide_your_email_address">Provide your email address</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="username">Username</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>

    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="doctors_near_you"><u>Doctors Near You</u></string>
    <string name="specialities">All Specialities</string>

    <string name="title_activity_near_me">Map</string>
    <string name="nearby_doctors_details">Nearby Doctors Details</string>
    <string name="image">Image</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_find_results">FindResultsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_appointment">AppointmentActivity</string>
    <string name="title_activity_deal">DealActivity</string>

</resources>
