<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow_gradient"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:padding="10dp"
                    android:showAsAction="always"
                    android:text="@string/welcomeText"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twentysp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bannerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:padding="10dp"
                    android:showAsAction="always"
                    android:text="@string/banner_Text"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twentysp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="16dp"
                android:gravity="center"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:id="@+id/doctor_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:elevation="10dp"
                    app:cardBackgroundColor="#FFFDE7"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="16dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/doctor_banner_Text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:showAsAction="always"
                            android:text="@string/doctor_banner_Text"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/twentysp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/doctorSearch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/search_view"
                            android:drawableStart="@drawable/ic_location_doctor"
                            android:hint="@string/doctor_search"
                            android:onClick="takeToDoctorSearchResults" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/pharmacy_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:elevation="10dp"
                    app:cardBackgroundColor="#FFFDE7"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="16dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/pharmacy_banner_Text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:showAsAction="always"
                            android:text="@string/medicine_banner_Text"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/twentysp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/medicineSearch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/search_view"
                            android:drawableStart="@drawable/ic_healing_black_24dp"
                            android:hint="@string/medicine_search"
                            android:onClick="takeToPharmacySearchResults" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:elevation="10dp"
                    app:cardBackgroundColor="#E91E63"
                    app:cardCornerRadius="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.472"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintVertical_bias="0.061">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_search_black_24dp"
                            android:text="Find"
                            android:textColor="@color/black"
                            android:textSize="26dp"
                            android:textStyle="bold"
                            android:onClick="takeToFindResultsActivity"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>